decrease z-index for the legend class to avoid the legend covering the nav-bar when scrolling
From playing around in dev tools z-index of 1 looked ok, but does it need to be higher?

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -468,7 +468,7 @@ button {
     right: 15px;
     width: 300px;
     border-radius: 2px;
-    z-index: 8000;
+    z-index: 1;
     box-shadow: rgba(67, 90, 111, 0.3) 0px 0px 1px, rgba(67, 90, 111, 0.47) 0px 2px 4px -2px;
 }
 
